# my_tools

./: 02.00_00_caffe.md  04_00_00_cuda.md  05.00_00_opencv.md  index.xmind  readme.md
01_pycharm/: 01.01_00_pycharm_for_linux.md  01.02_00_pycharm_for_mac.md  01.03_00_pycharm_for_windows.md  01.03_01_插件.md  01.04_01_clion远程连接服务器.md  01.04_02_在clion上运行cpp.md  01.80_01_远程链接服务器.md
02_docker/: 02.00_00_docker.md
03_cmake/: 03.00_00_cmake.md  03.01_00_cmake_vs.md
06_jupyter/: 06.80_02_快捷键.md
07_github/: 07.00_00_github.md  07.00_02_克隆现有仓库.md  07.80_01_commit_但没有_push_需要删除某文件.md  07.80_03_pycharm_已提交文件出现需要重新提交.md  07.80_04_如何同步主分分支与自己的分支.md  07.90_01_git简易指南.md
09_vs_code/: 09.01_00_如何编写c_cpp程序.md
10_markdown/: 10.01_01_如何配置upload.md
11_cmake/: 11.00_00_cmake.md  11.01_02_windows安装ninja.md  11.02_01_安装.md  11.03_00_Ninja构建系统.md
20_windows/: 20.01_02_必备软件.md
80_QA/: 80.00_01_VMware Workstation Pro 15.5.1 中文版+注册机.md
code_11_cmake/serveral_entry_level_examples/t2/: CMakeLists.txt
code_11_cmake/serveral_entry_level_examples/t3/lib/: CMakeLists.txt  hello.h
doc/01_pycharm/: 01.03_00_pycharm_for_windows.md  01.03_01_插件.md  01.04_02_在clion上运行cpp.md  01.80_00_QA.md  01.80_01_远程链接服务器.md
doc/02_docker/: 02.00_00_docker.md
doc/04_cuda/: 04.01_01_windows10_cuda.md
doc/06_jupyter/: 06.80_01_如何在指定目录使用jupyter_notebook.md  06.80_02_快捷键.md
doc/07_github/: 07.00_00_github.md  07.00_01_在github编辑公式.md  07.00_03_判断仓库的状态.md  07.80_02_Unable_to_create_index.lock_File_exists..md  07.90_00_reference.md  07.90_02_git官方文档.md
doc/09_vs_code/: 09.00_00_vs_code.md  (+4 more)
(+17 files in other folders)
